Fixed breaking changes.